# Avvie

./: CHANGELOG  README.md  com.github.taiko2k.avie.appdata.xml  com.github.taiko2k.avie.desktop  com.github.taiko2k.avvie.appdata.xml  com.github.taiko2k.avvie.desktop  com.github.taiko2k.avvie.json  com.github.taiko2k.avvie.yml  main-old..py  main.py  meson.build  run.sh
data/: com.github.taiko2k.avvie.appdata.xml.in  com.github.taiko2k.avvie.desktop.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  avvie.pot  bg.po  de.po  es.po  fr.mo  fr.po  it.po  meson.build  nl.po  pt_BR.po  ru.po  tr.po  uk.po
src/: avvie.in  main.py  meson.build
src/res/: pinku.css
